--- a/image/Dockerfile.gui
+++ b/image/Dockerfile.gui
@@ -30,6 +30,9 @@ RUN git clone https://github.com/comfyanonymous/ComfyUI.git && \
     git checkout $COMFYUI_GIT_REF
 RUN pip3 install --no-cache-dir -r /opt/program/ComfyUI/requirements.txt
 
+# Copy extra_model_paths so that ComfyUI load the model artifacts
+COPY extra_model_paths.yaml /opt/program/ComfyUI/
+
 # Run as non-root user
 RUN useradd --system --create-home --home-dir /home/ubuntu --shell /bin/bash -g root -u 10001 ubuntu && \
     chown -R ubuntu:root /opt/program
