--- a/image/Dockerfile.inference
+++ b/image/Dockerfile.inference
@@ -16,7 +16,7 @@ RUN pip3 install --no-cache-dir torch torchvision torchaudio --extra-index-url h
 
 # Set some environment variables. PYTHONUNBUFFERED prevents Python buffering our standard
 # output stream, which means that logs can be delivered to the user quickly. PYTHONDONTWRITEBYTECODE
-# stops Python creating the .pyc files which are unnecessary in this cast.
+# stops Python creating the .pyc files which are unnecessary in this case.
 ENV PYTHONUNBUFFERED=TRUE
 ENV PYTHONDONTWRITEBYTECODE=TRUE
 
@@ -44,4 +44,4 @@ RUN pip3 install --no-cache-dir -r /opt/program/requirements.txt
 EXPOSE 8080
 ENTRYPOINT ["python3"]
 CMD [ "serve" ]
-HEALTHCHECK CMD curl -fs http://localhost:8080 || exit 1
+HEALTHCHECK CMD curl -fs http://localhost:8080/ping || exit 1
